--- a/contactus.html
+++ b/contactus.html
@@ -262,28 +262,19 @@
 
                 <div class="card " style="align-content: center; ">
                     <img src="https://firebasestorage.googleapis.com/v0/b/techvyom22.appspot.com/o/new%2Fyesveer%20Singh%20.jpg?alt=media&token=22289c44-d104-433b-9629-88a59429e375" height="200px " width="200px " alt=" ">
-                    <p class="name ">Yesveer Singh</p>
-                    <p class="email "><a href="mailto:yesveer.singh@srmscet.edu " style="text-decoration: none; ">📧yesveer.singh@srmscet.edu</a></p>
-                    <p class="phone ">📱8787016919</p>
+                    <p class="name ">Amit  Verma</p>
+                    <p class="email "><a href="mailto:root.avanti@gmail.com" style="text-decoration: none; ">📧root.avanti@gmail.com</a></p>
+                    <p class="phone ">📱7505574391</p>
                     <ul>
                         <center>
                             <a href="https://chat.whatsapp.com/CZ1XAzB2dhX61Rwg0xaCeC " target="_blank "><i class="fa fa-whatsapp " style="font-size:20px;color:white; "></i></a>
-                            <a href="https://www.linkedin.com/in/kaal-bhairav " target="_blank "><i class="fa fa-linkedin " style="font-size:20px;color:white; "></i></a>
+                            <a href="https://www.linkedin.com/in/amitv007" target="_blank "><i class="fa fa-linkedin " style="font-size:20px;color:white; "></i></a>
 
                         </center>
                     </ul>
                 </div>
 
-                <div class="card" style=" align-content: center;">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/techvyom22.appspot.com/o/new%2FIMG_20220404_192739_693-converted-1.jpg?alt=media&token=e63fe542-f7bd-443a-9659-5719c648d33d" height="200px " width="200px " alt=" ">
-                    <p class="name ">Sneha Gupta</p>
-                    <p class="email "><a href="mailto:yesveer.singh@srmscet.edu" style="text-decoration: none; ">📧</a></p>
-                    <p class="phone ">📱</p>
-                    <ul>
-                        <a href="https://chat.whatsapp.com/CZ1XAzB2dhX61Rwg0xaCeC " target="_blank "><i class="fa fa-whatsapp " style="font-size:20px;color:white; "></i></a>
-                        <a href="#" target="_blank "><i class="fa fa-linkedin " style="font-size:20px;color:white; "></i></a>
-                    </ul>
-                </div>
+                
 
 
 
@@ -361,7 +352,7 @@
             
             .cards {
                 display: grid;
-                grid-template-columns: max-content max-content;
+                grid-template-columns: max-content;
                 justify-content: space-around;
                 background-image: linear-gradient(to right bottom, #f22d2d, #f5006d, #da2ba8, #9e56d5, #1271eb);
                 padding: 40px;
