--- a/contactus.html
+++ b/contactus.html
@@ -261,7 +261,7 @@
             <div class="cards">
 
                 <div class="card " style="align-content: center; ">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/techvyom22.appspot.com/o/new%2Fyesveer%20Singh%20.jpg?alt=media&token=22289c44-d104-433b-9629-88a59429e375" height="200px " width="200px " alt=" ">
+                    <img src="assets/amit verma.png" height="200px " width="200px " alt=" ">
                     <p class="name ">Amit  Verma</p>
                     <p class="email "><a href="mailto:root.avanti@gmail.com" style="text-decoration: none; ">📧root.avanti@gmail.com</a></p>
                     <p class="phone ">📱7505574391</p>
